auto metadata update

--- a/metadata.html
+++ b/metadata.html
@@ -3,6 +3,6 @@
     <x-polyedit></x-polyedit>
   </template>
   <template id="imports">
-    <link rel="import" href="x-polyedit.html">
+    <link rel="import" href="public/components/x-polyedit/x-polyedit.html">
   </template>
 </x-meta>
